Fix header links inability to be clicked due to negative z-index

--- a/css/style.css
+++ b/css/style.css
@@ -151,12 +151,11 @@ h3 {
 
 header {
   position: relative;
-  left: 17rem;
+  left: 19rem;
   bottom: 33rem;
   text-align: right;
   width: 100%;
-  max-width: 300px;
-  z-index: -3;
+  max-width: 220px;
 }
 
 .nav__listL {
@@ -166,7 +165,9 @@ header {
 }
 
 .nav__itemL {
-  padding: 1rem;
+  padding-top: 1rem;
+  padding-right: 1rem;
+  padding-bottom: 1rem;
   background: var(--clr-accent);
   font-family: var(--ff-title);
   font-size: var(--fs-h3);
